// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"SoftwareSourceCode","codeSampleType":"code snippet","text":"mongoimport --db test --collection inventory ^\\n          --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^\\n          --drop --file ~\\\\downloads\\\\inventory.crud.json","programmingLanguage":"JavaScript"}
  </script>
  .emotion-0 {
  display: table;
  margin: 24px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-0 button>div>div {
  font-size: 13px;
}

.emotion-0 pre {
  background-color: #F9FBFA;
  color: #001E2B;
}

.dark-theme .emotion-0 pre {
  background-color: #001E2B;
  color: #F9FBFA;
}

.emotion-0 [data-testid='leafygreen-code-panel'] {
  background-color: #FFFFFF;
  border-color: #E8EDEB;
}

.dark-theme .emotion-0 [data-testid='leafygreen-code-panel'] {
  background-color: #3D4F58;
  border-color: #3D4F58;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-function,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-class,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-tag,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-attr,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-pseudo,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-id,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-class {
  color: #CC3887;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-function,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-class,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-tag,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-attr,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-pseudo,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-id,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-class {
  color: #FF7DC3;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-regexp,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-number,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-literal,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-function.lg-highlight-title {
  color: #016ee9;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-regexp,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-number,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-literal,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-function.lg-highlight-title {
  color: #2dc4ff;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-quote,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-section,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-name {
  color: #007ab8;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-quote,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-section,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-name {
  color: #a5e3ff;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-string,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-addition {
  color: #12824D;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-string,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-addition {
  color: #35DE7B;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta-string {
  color: #956d00;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta-string {
  color: #EDB210;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-variable,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-deletion,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-symbol,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-bullet,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-link,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attr,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attribute,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-language,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-template-variable,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-built_in,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-type,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-params {
  color: #D83713;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-variable,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-deletion,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-symbol,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-bullet,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-link,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attr,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attribute,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-language,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-template-variable,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-built_in,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-type,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-params {
  color: #FF6F44;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-title,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-class.lg-highlight-title {
  color: #001E2B;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-title,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-class.lg-highlight-title {
  color: #F9FBFA;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-doctag,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-formula {
  color: #001E2B;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-doctag,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-formula {
  color: #F9FBFA;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-comment {
  color: #3D4F58;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-comment {
  color: #C1C7C6;
}

.emotion-0>div>div {
  display: grid;
  grid-template-columns: code panel;
}

.emotion-0>div {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-color: #E8EDEB;
}

.dark-theme .emotion-0>div {
  border-color: #3D4F58;
}

.emotion-1 {
  leafygreen-ui-c16gp1 border-bottom: none;
  border-top-right-radius: 12px;
  border-top-left-radius: 12px;
  border-color: #E8EDEB;
}

.dark-theme .emotion-1 {
  border-color: #3D4F58;
}

.emotion-2 {
  padding: 10px;
  font-size: 14px;
  margin-left: 5px;
  border-bottom: none;
  color: #5C6C75;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

.emotion-3 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-4 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-4:before,
.emotion-4:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 40px;
  border-radius: 40%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-4:before {
  grid-column: 1;
  left: -40px;
}

.emotion-4:after {
  grid-column: 2;
}

.emotion-5 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  -webkit-transition: height 300ms ease-in-out;
  transition: height 300ms ease-in-out;
  white-space: pre;
  background-color: #F9FBFA;
  color: #001E2B;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-5 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-5 {
    white-space: pre;
  }
}

.emotion-5:focus-visible {
  outline: none;
}

.emotion-6 {
  color: inherit;
  font-family: 'Source Code Pro',Menlo,monospace;
  font-size: 13px;
  line-height: 20px;
}

.emotion-7 {
  border-spacing: 0;
}

.emotion-8 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  background-color: #FFFFFF;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
  border-left: solid 1px;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

<div
    class="intro-code-block emotion-0"
  >
    <div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          Test Caption
        </div>
      </div>
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        <pre
          class="emotion-5"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light javascript emotion-6"
          >
            <table
              class="emotion-7"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-8"
                  >
                    mongoimport --db test --collection inventory ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-8"
                  >
                              --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-8"
                  >
                              --drop --file ~\\downloads\\inventory.
                    <span
                      class="lg-highlight-property"
                    >
                      crud
                    </span>
                    .
                    <span
                      class="lg-highlight-property"
                    >
                      json
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-11"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when none is passed in as a language 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"SoftwareSourceCode","codeSampleType":"code snippet","text":"[{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]"}
  </script>
  .emotion-0 {
  display: table;
  margin: 24px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-0 button>div>div {
  font-size: 13px;
}

.emotion-0 pre {
  background-color: #F9FBFA;
  color: #001E2B;
}

.dark-theme .emotion-0 pre {
  background-color: #001E2B;
  color: #F9FBFA;
}

.emotion-0 [data-testid='leafygreen-code-panel'] {
  background-color: #FFFFFF;
  border-color: #E8EDEB;
}

.dark-theme .emotion-0 [data-testid='leafygreen-code-panel'] {
  background-color: #3D4F58;
  border-color: #3D4F58;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-function,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-class,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-tag,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-attr,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-pseudo,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-id,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-class {
  color: #CC3887;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-function,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-keyword.lg-highlight-class,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-tag,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-attr,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-pseudo,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-id,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-selector-class {
  color: #FF7DC3;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-regexp,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-number,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-literal,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-function.lg-highlight-title {
  color: #016ee9;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-regexp,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-number,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-literal,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-function.lg-highlight-title {
  color: #2dc4ff;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-quote,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-section,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-name {
  color: #007ab8;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-quote,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-section,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-name {
  color: #a5e3ff;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-string,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-addition {
  color: #12824D;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-string,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-addition {
  color: #35DE7B;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta-string {
  color: #956d00;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta-string {
  color: #EDB210;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-variable,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-deletion,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-symbol,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-bullet,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-link,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attr,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attribute,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-language,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-template-variable,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-built_in,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-type,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-params {
  color: #D83713;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-variable,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-deletion,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-symbol,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-bullet,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-meta,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-link,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attr,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-attribute,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-language,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-template-variable,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-built_in,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-type,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-params {
  color: #FF6F44;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-title,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-class.lg-highlight-title {
  color: #001E2B;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-title,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-class.lg-highlight-title {
  color: #F9FBFA;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-doctag,
.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-formula {
  color: #001E2B;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-doctag,
.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-formula {
  color: #F9FBFA;
}

.emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-comment {
  color: #3D4F58;
}

.dark-theme .emotion-0 [class*='lg-highlight-hljs-'] .lg-highlight-comment {
  color: #C1C7C6;
}

.emotion-0>div>div {
  display: grid;
  grid-template-columns: code panel;
}

.emotion-0>div {
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  border-color: #E8EDEB;
}

.dark-theme .emotion-0>div {
  border-color: #3D4F58;
}

.emotion-1 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-2 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-2:before,
.emotion-2:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 40px;
  border-radius: 40%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-2:before {
  grid-column: 1;
  left: -40px;
}

.emotion-2:after {
  grid-column: 2;
}

.emotion-3 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  -webkit-transition: height 300ms ease-in-out;
  transition: height 300ms ease-in-out;
  white-space: pre;
  background-color: #F9FBFA;
  color: #001E2B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 6px;
  padding-bottom: 6px;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-3 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-3 {
    white-space: pre;
  }
}

.emotion-3:focus-visible {
  outline: none;
}

.emotion-4 {
  color: inherit;
  font-family: 'Source Code Pro',Menlo,monospace;
  font-size: 13px;
  line-height: 20px;
}

.emotion-5 {
  border-spacing: 0;
}

.emotion-6 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  background-color: #FFFFFF;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
  border-left: solid 1px;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-7 svg {
  width: 16px;
  height: 16px;
}

<div
    class="intro-code-block emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <pre
          class="emotion-3"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light none emotion-4"
          >
            <table
              class="emotion-5"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-6"
                  >
                    [{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-7"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
